# FasterWhisper-BentoML

./: .bentoignore  .editorconfig  Dockerfile  LICENSE  README.md  api_models.py  bentofile.yaml  compose.yaml  config.py  core.py  launch.py  logger.py  model_manager.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  service.py  utils.py
api_models/: enums.py  input_models.py  output_models.py
tests/: test_analyse_faster_whisper_bug.py  test_faster_whisper.py  test_model_manager.py
tests/integration/: test_integration.py
tests/unit/: test_analyse_faster_whisper_bug.py  test_faster_whisper.py
