[project]
name = "FasterWhisper-BentoML"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml==1.3.13",
    "fastapi>=0.115.5",
    "faster-whisper==1.0.3",
    "torch>=2.5.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
