[project]
name = "bentoml-faster-whisper"
version = "1.0.0"
requires-python = "==3.12.7"
dependencies = [
    "bentoml==1.3.15",
    "fastapi>=0.115.5",
    "faster-whisper==1.1.0",
    "torch>=2.5.1",
    "pydantic~=2.10.3",
    "requests~=2.32.3",
    "ctranslate2~=4.5.0",
    "python-dotenv~=1.0.1",
    "pytest~=8.3.4",
    "uvicorn~=0.32.1",
    "pydub>=0.25.1",
]

[tool.bentoml.build]
service = "service:FasterWhisper"
description = "OpenAI compatible ++ FasterWhisper API"
include = ["*.py", "path/to/a/file.csv"]
exclude = ["tests/", "launch.py"]

[tool.bentoml.build.labels]
owner = "Yanick-Schraner"
stage = "production"
